kustomize/base/hello-app/httproute.yaml
# HTTPRoute - правило маршрутизации: путь / через hello-gateway -> сервис hello-app.
# Без hostnames: маршрут матчит ЛЮБОЙ Host - приложение доступно по голому IP
# (http://<node-ip>:<nodePort>) без hosts-записей.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: hello-app
spec:
  parentRefs:
    - name: hello-gateway              # цепляемся к Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-app              # трафик -> сервис
          port: 80
